--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 #canvas {
-    position: absolute;
-    background: black;
-    margin-top: 10%;
-    width: 60%;
-    height: 50%;
-    top: 0;
-    left: 0;
+  position: absolute;
+  background: black;
+  margin-top: 100px;
+  /* margin-left: 200px;
+  margin-right: 100px; */
+  top: 0;
+  left: 0;
+}
+#canvasDiv {
+  padding: 100px 200px 400px 200px;
+  margin-top: 200px;
 }
