--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,15 @@
   position: absolute;
   background: black;
   margin-top: 100px;
-  /* margin-left: 200px;
-  margin-right: 100px; */
   top: 0;
   left: 0;
 }
-#canvasDiv {
-  padding: 100px 200px 400px 200px;
-  margin-top: 200px;
+.buttonDiv {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+.buttons {
+    display: flex;
+    flex-direction: row;
 }
